--- a/app/assets/stylesheets/listings.css.scss
+++ b/app/assets/stylesheets/listings.css.scss
@@ -59,6 +59,7 @@
     }
 
     #search_keywords_seller_and_price {
+      input { width: 99%; margin: 0; padding: 0; }
       input.currency { width: 5em; }
     }
 
